[package]
name = "mdbook-svgbob2"
description = "Alternative mdbook preprocessor for svgbob."
version = "0.1.1"
authors = ["Thomas Lindae <thomas.lindae@in.tum.de>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Treeniks/mdbook-svgbob2"
keywords = ["mdbook", "markdown", "svg", "svgbob"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde_json = "1.0"
semver = "1.0"

mdbook = "0.4"
pulldown-cmark = "0.8"
pulldown-cmark-to-cmark = "6.0"

svgbob = "0.6"
