[package]
name = "mdbook-svgbob2"
description = "Alternative mdbook preprocessor for svgbob."
version = "0.2.4"
authors = ["Thomas Lindae <thomas.lindae@in.tum.de>", "Matthias Beyer <mail@beyermatthias.de>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Treeniks/mdbook-svgbob2"
keywords = ["mdbook", "markdown", "svg", "svgbob"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1"
serde_json = "1.0"
semver = "1.0"

mdbook = "0.4"
pulldown-cmark = "0.9"
pulldown-cmark-to-cmark = "10.0"

svgbob = "0.6"
